--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   wakelock: ^0.5.0+2
   universal_html: ^2.0.8
   visibility_detector: ^0.2.0
+  cupertino_stepper: ^0.2.1
+  multi_wizard: ^1.0.1
 
 #  galleryimage: ^1.1.0
 
@@ -50,8 +52,12 @@ flutter:
   assets:
     - assets/images/
 
-  fonts:
-    - family: SanFrancisco
-      fonts:
-        - asset: assets/fonts/SanFrancisco/San-Francisco-Display-Regular.ttf
-        - asset: assets/fonts/SanFrancisco/San-Francisco-Display-Bold.ttf
+#  fonts:
+#    - family: SanFrancisco
+#      fonts:
+#        - asset: assets/fonts/SanFrancisco/San-Francisco-Display-Regular.ttf
+#        - asset: assets/fonts/SanFrancisco/San-Francisco-Display-Bold.ttf
+
+#    - family: Helvetica
+#      fonts:
+#        - asset: assets/fonts/Helvetica/Helvetica-Neue-UltraLight.otf
