--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,13 @@ dependencies:
   visibility_detector: ^0.2.0
   cupertino_stepper: ^0.2.1
   multi_wizard: ^1.0.1
+  cloud_firestore: ^3.1.10
+  firebase_auth: ^3.3.9
+  firebase_core: ^1.13.1
+  firebase_database: ^9.0.8
+  loading_indicator: ^3.0.3
+  intl: ^0.17.0
+  firebase_messaging: ^11.2.10
 
 #  galleryimage: ^1.1.0
 
