--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   loading_indicator: ^3.0.3
   intl: ^0.17.0
   firebase_messaging: ^11.2.10
+  dotted_border: ^2.0.0+2
+
 
 #  galleryimage: ^1.1.0
 
