--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,11 @@ dependencies:
   intl: ^0.17.0
   firebase_messaging: ^11.2.10
   dotted_border: ^2.0.0+2
+  firebase_storage: ^10.2.15
+  shared_preferences: ^2.0.13
+  image_picker: ^0.8.5
+  cached_network_image: ^3.2.0
+  
 
 
 #  galleryimage: ^1.1.0
