--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   shared_preferences: ^2.0.13
   image_picker: ^0.8.5
   cached_network_image: ^3.2.0
+  url_launcher: ^6.1.0
   
 
 
