--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,8 @@ dependencies:
   cached_network_image: ^3.2.0
   url_launcher: ^6.1.0
   file_picker: ^4.5.1
-  
+  path_provider: ^2.0.11
+  open_file: ^3.2.1
 
 
 #  galleryimage: ^1.1.0
