--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   open_file: ^3.2.1
   http: ^0.13.4
   pay: ^1.0.10
+  intl_phone_number_input: ^0.7.0+2
 
 
 #  galleryimage: ^1.1.0
