--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   http: ^0.13.4
   pay: ^1.0.10
   intl_phone_number_input: ^0.7.0+2
+  flutter_datetime_picker: ^1.5.1
 
 
 #  galleryimage: ^1.1.0
