--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.2.0+3
+version: 2.2.0+4
 
 environment:
   sdk: ">=2.16.1 <3.0.0"
@@ -59,6 +59,7 @@ dependencies:
   pay: ^1.0.10
   intl_phone_number_input: ^0.7.0+2
   flutter_datetime_picker: ^1.5.1
+  firebase_core_platform_interface: 4.5.1
 
 
 #  galleryimage: ^1.1.0
